<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SiHuo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="me">我</string>
    <string name="user_name">用户名</string>
    <string name="trust">可信度</string>
    <string name="influence">|影响力</string>
    <string name="influence2">影响力</string>
    <string name="turnover">成交量</string>
    <string name="good">好评率</string>
    <string name="my_main">我的主页</string>
    <string name="my_friend">我的朋友</string>
    <string name="my_wallet">我的钱包</string>
    <string name="goods_selling">在卖的商品</string>
    <string name="goods_selling2">在售商品</string>
    <string name="goods_sold">已卖掉的商品</string>
    <string name="goods_ping">已售评价</string>
    <string name="goods_bought">已买到的商品</string>
    <string name="setting">设置</string>
    <string name="title_activity_request_friends">RequestFriends</string>
    <string name="sihuo_btn">去邀请好友</string>
    <string name="title_activity_show_kind">ShowKindActivity</string>
    <string name="title_activity_show_more">ShowMoreActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_good">GoodActivity</string>
    <string name="title_activity_mine_name_info">MineNameInfoActivity</string>
    <string name="title_activity_my_page">MyPageActivity</string>
    <string name="title_activity_my_purse">MyPurseActivity</string>
    <string name="title_activity_my_sale">MySaleActivity</string>
    <string name="title_activity_my_sale_out">MySaleOutActivity</string>
    <string name="title_activity_my_buy">MyBuyActivity</string>
    <string name="title_activity_my_setting">MySettingActivity</string>
    <string name="title_activity_my_friend">MyFriendActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_image_view01">ImageView01</string>
    <string name="title_activity_gv__info">GV_Info</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

</resources>
