<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#EBD71E23">

        <ImageButton
            android:id="@+id/my_page_back_off"
            style="@style/wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon_back_off" />

        <ImageButton
            android:id="@+id/my_page_goods_menu"
            style="@style/wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/my_page_back_off"
            android:layout_marginRight="20dp"
            android:background="@drawable/icon_goods_menu" />
        <ImageView
            android:id="@+id/my_page_my_photo"
           style="@style/wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_default_avatr100" />

        <TextView
            android:id="@+id/my_page_user_name"
            style="@style/wrap_content"
            android:layout_below="@+id/my_page_my_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/user_name"
            android:textColor="#ffffff"
            android:textSize="28sp" />
    </RelativeLayout>

    <LinearLayout
        style="@style/vertical_layout_weight"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_page_ll_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="1"
                android:textColor="#ff0000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/trust"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_page_ll_tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="1"
                android:textColor="#ff0000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/influence2"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_page_ll_tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"
                android:textColor="#ff0000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/turnover"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_page_ll_tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0%"
                android:textColor="#ff0000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/good"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
    <RadioGroup
       style="@style/vertical_layout_weight"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        >
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:button="@null"
            android:text="@string/goods_selling2"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:button="@null"
            android:text="@string/goods_ping"/>
        </RadioGroup>
    <TextView
        style="@style/vertical_layout_weight"
        android:layout_weight="5"/>
</LinearLayout>